

Version history:
================

---
v.1.3.6 - 2020-?
 * Fixed a UnicodeEncodeError that would occur in some environments when
   printing Emoji to screen (yeah, Windows, we are looking at you!...).
 * Fixed a strange multiprocessing error that apparently only occured
   on... you guessed, *that* operating system.
   
---
v.1.3.5 - 2020-04-07
 * Fixed a small bug in unsupported image format treatment.
 * Added experimental support for MPO images, which are now treated as JPEG
   image files (if multiple pictures are present in one MPO file, only the first
   one will be processed).

---
v.1.3.4 - 2020-02-19
 * Ignore unsupported image formats (contributed by Petro (liashchynskyi@GitHub).
 * Added brief instructions (and a script for macOS) for Pillow-SIMD
   installation, as a faster alternative to Pillow.
 
---
v.1.3.3 - 2019-08-06
 * Any temporary files (e.g.: '~temp~filename.jpg') created by this utility
   are now ignored, to avoid stepping on its own feet. As a side effect, if
   you have the strange habit of naming your image files ~temp~something.xxx,
   they will also be ignored. So, please get a better naming scheme until we
   come out with a better solution. ;-)
 * Trying to run optimize-images without Pillow installed now results in a
   simple message being printed out to the screen, instead of a full exception
   traceback.

---
v.1.3.2 - 2019-06-27
 * Added a symbol legend to the beginning of the optimization report, so that
   the user knows what each symbol means.
 * Fixed a UnicodeEncodeError that would occur in some environments when
   printing Emoji to screen.

---
v.1.3.1 - 2019-05-03
 * Fixed a PermissionError that would occur when trying to optimize a single
   image in the current directory without explicitly specifying its path.
 * Added basic Exception handling for piexif related instructions. This is a
   temporary solution that should silence, for now, some errors related to